# mati-web-scraping-project-tutorial

./: main.py  pyproject.toml
data/: web_db.db
src/: spotify_scraping.ipynb
