[project]
name = "mati-web-scraping-project-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    "pandas>=2.3.3",
    "pysqlite3>=0.6.0",
    "requests>=2.32.5",
    "sqlalchemy==1.4.37",
]
